fix: remove type error using css whitespace property

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -167,9 +167,10 @@
 
 .result {
   margin: 0;
-  margin-top: -15%;
+  margin-top: -3rem;
   font-size: 1rem;
   line-height: 1.5;
+  white-space: pre-wrap;
 }
 
 .logo {
